fix modal text align

--- a/src/app/_components/components.module.css
+++ b/src/app/_components/components.module.css
@@ -435,7 +435,7 @@
   border: none;
   cursor: pointer;
   color: white;
-  text-align: center;
+  text-align: justify;
 }
 
 .modal__close {
